# acos

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  GROK_NOTES.md  GROK_SYSTEM_PROMPT.md  LICENSE  README.md  build.sh  install.sh  vcpkg.json
.github/workflows/: build.yml
.planning/: P2P_NODE_MESH_PLAN.md  PLATFORM_CAPABILITIES_PLAN.md  RECURSIVE_SELF_IMPROVEMENT_PLAN.md  XAI_CACHE_AND_BATCH_PLAN.md
apps/ai-playlist-builder/: index.html
apps/cryptocom-analyzer/: index.html
cmake/: build_info.h.in
packaging/: Makefile  build-all.sh  build-deb.sh  build-macos.sh  build-tarball.sh  deploy-to-packages.sh  publish-repo.sh  setup-apt-repo.sh
packaging/homebrew/: avacli.rb
scripts/: bundle-default-prompt.py  bundle-ui.py  extract-ui.py  split_embedded_strings.py
src/: main.cpp
src/agents/: LeaseManager.cpp  LeaseManager.hpp  ScopedToolExecutor.cpp  ScopedToolExecutor.hpp  SubAgentManager.cpp  SubAgentManager.hpp
src/auth/: AuthManager.cpp  AuthManager.hpp  MasterKeyManager.cpp  MasterKeyManager.hpp
src/client/: BatchClient.cpp  BatchClient.hpp  NodeClient.cpp  NodeClient.hpp  VultrClient.cpp  VultrClient.hpp  XAIClient.cpp  XAIClient.hpp
src/config/: ApiKeyStorage.cpp  ApiKeyStorage.hpp  Config.cpp  Config.hpp  ModelRegistry.cpp  ModelRegistry.hpp  PlatformSettings.cpp  PlatformSettings.hpp  ServeSettings.cpp  ServeSettings.hpp  VaultStorage.cpp  VaultStorage.hpp
src/core/: AgentEngine.cpp  AgentEngine.hpp  Application.cpp  Application.hpp  TokenTracker.hpp  Types.hpp
src/db/: AppDatabase.cpp  AppDatabase.hpp  Database.cpp  Database.hpp
src/infra/: VultrDeployUserdata.cpp  VultrDeployUserdata.hpp
src/platform/: Hash.cpp  Hash.hpp  Paths.cpp  Paths.hpp  PortableTime.hpp  ProcessRunner.cpp  ProcessRunner.hpp  ProcessSupervisor.cpp  ProcessSupervisor.hpp  Runtime.cpp  Runtime.hpp
src/server/: AppTokens.cpp  AppTokens.hpp  DefaultSystemPrompt.hpp  EmbeddedAssets.hpp  HttpServer.cpp  HttpServer.hpp  LogBuffer.cpp  LogBuffer.hpp  Routes.hpp  RoutesAppDB.cpp  RoutesApps.cpp  RoutesAuth.cpp  RoutesBatches.cpp  RoutesChat.cpp  RoutesDB.cpp  RoutesData.cpp  RoutesFiles.cpp  RoutesInfra.cpp  RoutesKnowledge.cpp  RoutesRelay.cpp  RoutesServices.cpp  RoutesSettings.cpp  RoutesSubAgents.cpp  RoutesSystem.cpp  RoutesTools.cpp  ServerContext.hpp  ServerHelpers.cpp  ServerHelpers.hpp  UIFileServer.cpp  UIFileServer.hpp
src/services/: BatchPoller.cpp  BatchPoller.hpp  DepInstaller.cpp  DepInstaller.hpp  MeshManager.cpp  MeshManager.hpp  RelayClient.cpp  RelayClient.hpp  RelayManager.cpp  RelayManager.hpp  ServiceManager.cpp  ServiceManager.hpp
src/session/: SessionManager.cpp  SessionManager.hpp
src/tools/: ProjectNotes.cpp  ProjectNotes.hpp  ToolExecutor.cpp  ToolExecutor.hpp  ToolRegistry.cpp  ToolRegistry.hpp
src/utils/: TimeUtils.hpp
ui/: index.html
ui/css/: style.css  variables.css
ui/js/: app.js
ui/themes/: cyberpunk.css  default.css  light.css
